tests/ui/frontmatter/extra-after-end.rs
---
---cargo
//~^ ERROR: extra characters after frontmatter close are not allowed

fn main() {}
